--- a/FirstTouchDashBoard/Views/Certificates/Index.cshtml
+++ b/FirstTouchDashBoard/Views/Certificates/Index.cshtml
@@ -4,11 +4,12 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Certificates</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
 <table class="table">
     @using (Html.BeginForm("Index", "Certificates", FormMethod.Get))
     {
