--- a/FirstTouchDashBoard/Views/Certificates/Index.cshtml
+++ b/FirstTouchDashBoard/Views/Certificates/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<FirstTouchDashBoard.Models.FirstTouchCertificate>
+﻿@model FirstTouchDashBoard.Models.ExtendedCertificates
 
 @{
     ViewBag.Title = "Index";
@@ -10,49 +10,74 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 
-<table class="table">
-    @using (Html.BeginForm("Index", "Certificates", FormMethod.Get))
-    {
-        <tr>
-        <th>
-            @Html.ActionLink("Property ID", "Index", new { SortOrder = ViewBag.propertyid })
-        </th>
-        <th>
-            @Html.ActionLink("UPRN", "Index", new { SortOrder = ViewBag.uprn })
-        </th>
-        <th>
-            @Html.ActionLink("Address Line 1", "Index", new { SortOrder = ViewBag.addressline1 })
-        </th>
-        <th>
-            @Html.ActionLink("Certificate Type", "Index", new { SortOrder = ViewBag.certtype })
-        </th>
-        <th>
-            @Html.ActionLink("Post Code", "Index", new { SortOrder = ViewBag.postcode })
-        </th>
-        <th>
-            @Html.ActionLink("Operative Name", "Index", new { SortOrder = ViewBag.operativename })
-        </th>
-        <th>
-            @Html.ActionLink("Trade Group", "Index", new { SortOrder = ViewBag.tradegroup })
-        </th>
-        <th>
-            @Html.ActionLink("EDOCS ref", "Index", new { SortOrder = ViewBag.eDocsRef })
-        </th>
-        <th>
-            @Html.ActionLink("Status", "Index", new { SortOrder = ViewBag.status })
-        </th>
-        <th>
-            @Html.ActionLink("Date and Time", "Index", new { SortOrder = ViewBag.datetime })
-        </th>
-        <th>
-            @Html.ActionLink("Cause", "Index", new { SortOrder = ViewBag.cause })
-        </th>
-            <th></th>
-            </tr>
-    }
-  
+@using (Html.BeginForm("Index","Certificates", FormMethod.Post))
+{
 
-    @foreach (var item in Model)
+    <p>
+        Certificate Type: @Html.EditorFor(Model => Model.certType)
+        @*@Html.ValidationMessageFor(model => model.certType)*@
+
+    </p>
+    <p>
+       UPRN : @Html.EditorFor(Model => Model.uprn)
+        @*@Html.ValidationMessageFor(model => model.uprn)*@
+    </p>
+    <p>
+        Property ID: @Html.EditorFor(Model => Model.propertyid)
+        @*@Html.ValidationMessageFor(model => model.propertyid)*@
+
+    </p>
+    <p>
+        Post Code: @Html.EditorFor(Model => Model.postCode)
+        @*@Html.ValidationMessageFor(model => model.postCode)*@
+        
+
+    </p>
+    <input type="submit" value="Search" class="btn btn-primary" />
+}
+
+<table class="table">
+  
+    
+        <tr>
+            <th>
+                @Html.ActionLink("Property ID", "Index", new { SortOrder = ViewBag.propertyid })
+            </th>
+            <th>
+                @Html.ActionLink("UPRN", "Index", new { SortOrder = ViewBag.uprn })
+            </th>
+            <th>
+                @Html.ActionLink("Address Line 1", "Index", new { SortOrder = ViewBag.addressline1 })
+            </th>
+            <th>
+                @Html.ActionLink("Certificate Type", "Index", new { SortOrder = ViewBag.certtype })
+            </th>
+            <th>
+                @Html.ActionLink("Post Code", "Index", new { SortOrder = ViewBag.postcode })
+            </th>
+            <th>
+                @Html.ActionLink("Operative Name", "Index", new { SortOrder = ViewBag.operativename })
+            </th>
+            <th>
+                @Html.ActionLink("Trade Group", "Index", new { SortOrder = ViewBag.tradegroup })
+            </th>
+            <th>
+                @Html.ActionLink("EDOCS ref", "Index", new { SortOrder = ViewBag.eDocsRef })
+            </th>
+            <th>
+                @Html.ActionLink("Status", "Index", new { SortOrder = ViewBag.status })
+            </th>
+            <th>
+                @Html.ActionLink("Date and Time", "Index", new { SortOrder = ViewBag.datetime })
+            </th>
+            <th>
+                @Html.ActionLink("Cause", "Index", new { SortOrder = ViewBag.cause })
+            </th>
+            <th></th>
+        </tr>
+
+
+    @foreach (var item in Model.lCertificates)
     {
         <tr>
             <td>
