--- a/FirstTouchDashBoard/Views/Administration/Index.cshtml
+++ b/FirstTouchDashBoard/Views/Administration/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Administration Tab</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add User", "Create")
 </p>
 <table class="table">
     <tr>
